syntax = "proto3";

package user;

service UserService {
  rpc GetCompaniesDetails (CompaniesRequest) returns (CompaniesResponse);
  rpc GetJobSeekerDetailsById (JobSeekerIdsRequest) returns (JobSeekerBasicList);
}

message JobSeekerIdsRequest {
  repeated string ids = 1; 
}

message JobSeekerBasic {
  string id = 1;
  string fullName = 2;
  string email = 3;
  string image = 4;
}

message JobSeekerBasicList {
  repeated JobSeekerBasic jobSeekers = 1;
}

message CompaniesRequest {
  repeated string companyIds = 1;  
}

message CompanyDetails {
  string id = 1;
  string companyName = 2;
  string location = 3;
  string logo = 4;
}

message CompaniesResponse {
  repeated CompanyDetails companies = 1;  
}

